@@ -3,7 +3,7 @@ NAME
     class
 
 VERSION
-    version 0.40.0
+    version 0.40.1
 
 SYNOPSIS
         package MyClass;
