@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Robin Smidsrød
 
 ;Semantic versioning, see http://semver.org/
-version = 0.40.0
+version = 0.40.1
 
 [NextRelease]
 [@Git]
@@ -45,3 +45,5 @@ Storable = 0
 [Prereqs / BuildRequires]
 JSON = 0
 Data::Serializer::JSON = 0
+XML::Simple = 0
+Data::Serializer::XML::Simple = 0
